--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>entre em contato pelo email mateus@email.com</p>
+    <p>entre em contato pelo email mateus.salomao@email.com</p>
 </body>
 </html>
